# xmdsclient

./: .travis.yml  CMakeLists.txt  README.md  xmdsclient.pc.in
example/: .main.c.swp  CMakeLists.txt  main.c
include/xmdsclient/: xmds-node.h  xmds-params.h  xmds-util.h  xmds.h
src/: .xmds-util.c.swp  .xmds.c.swp  CMakeLists.txt  mbedtls-base64.c  mbedtls-md5.c  mbedtls-md5.h  soap-nsinfo.c  soap-nsinfo.h  soap-transport-curl.c  soap-transport-curl.h  xmds-node.c  xmds-params-func.c  xmds-params-func.h  xmds-params.c  xmds-soap.c  xmds-soap.h  xmds-util.c  xmds.c  xml2-soap.c  xml2-soap.h  xml2-xmds-request.c  xml2-xmds-request.h  xml2-xmds-response.c  xml2-xmds-response.h  xml2-xmds.c  xml2-xmds.h
